--- a/index.html
+++ b/index.html
@@ -2,17 +2,14 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Infinite Terrain | three.js</title>
+  <title>Lesssgoooo</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
 <body>
-<!-- partial:index.partial.html -->
+  <button class="button" id="introductionButton" onclick="sectionProgress('Eo', 'Visual', 0)">Begin Prototype</button>
 
-<!-- partial -->
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/92/three.min.js'></script>
-<script src='https://codepen.io/DonKarlssonSan/pen/bLGjLm.js'></script>
-<script src='https://codepen.io/DonKarlssonSan/pen/ZvdZGv.js'></script><script  src="./script.js"></script>
-
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+  <script src="./script.js"></script>
 </body>
 </html>
