--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
 
 </head>
 <body>
-  <button class="button" id="introductionButton" onclick="sectionProgress('Eo', 'Visual', 0)">Begin Prototype</button>
+  <button class="button" id="introductionButton" onclick="sectionProgress('Eo', 'Visual', 0);">Begin Prototype</button>
 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-  <script src="./script.js"></script>
+  <script type="module" src="./dialogues.js"></script>
+  <script type="module" src="./script.js"></script>
 </body>
 </html>
