--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 
 </head>
 <body>
-  <button class="button" id="introductionButton" onclick="sectionProgress('Eo', 'Visual', 0);">Begin Prototype</button>
-
+  <video loop src="./assets/BG.mp4" style="width:100%; height:auto; z-index:-1; min-height: 100vh;" id="video"></video>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   <script type="module" src="./dialogues.js"></script>
   <script type="module" src="./script.js"></script>
