--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div id="videoContainer">
-    <video loop src="./assets/BG.mp4" id="video"></video>
+    <video loop src="./Assets/BG.mp4" id="video"></video>
   </div>
   <div id="loading">
     <div id="loading1" onclick="introduction(0)"></div>
