--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
         });
         if (document.documentElement.requestFullscreen) {
           document.documentElement.requestFullscreen();
-        } else if (elem.webkitRequestFullscreen) {
+        } else if (document.documentElement.webkitRequestFullscreen) {
           /* Safari */
           document.documentElement.webkitRequestFullscreen();
-        } else if (elem.msRequestFullscreen) {
+        } else if (document.documentElement.msRequestFullscreen) {
           /* IE11 */
           document.documentElement.msRequestFullscreen();
         }
