--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <p id="pLoading" class="loadAnimation2">Loading</p>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/screenfull.js/5.1.0/screenfull.min.js" integrity="sha512-SGPHIoS+NsP1NUL5RohNpDs44JlF36tXLN6H3Cw+EUyenEc5zPXWqfw9D+xmvR00QYUYewQIJQ6P5yH82Vw6Fg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   <script type="module" src="./dialogues.js"></script>
   <script type="module" src="./script.js"></script>
@@ -28,28 +29,13 @@
         $('#fullscreen').css({
           'background-image': './Assets/Buttons/FullscreenOpen.png'
         });
-        if (document.exitFullscreen) {
-          document.exitFullscreen();
-        } else if (document.webkitExitFullscreen) {
-          /* Safari */
-          document.webkitExitFullscreen();
-        } else if (document.msExitFullscreen) {
-          /* IE11 */
-          document.msExitFullscreen();
-        }
       } else {
         $('#fullscreen').css({
           'background-image': './Assets/Buttons/FullscreenClose.png'
         });
-        if (document.documentElement.requestFullscreen) {
-          document.documentElement.requestFullscreen();
-        } else if (document.documentElement.webkitRequestFullscreen) {
-          /* Safari */
-          document.documentElement.webkitRequestFullscreen();
-        } else if (document.documentElement.msRequestFullscreen) {
-          /* IE11 */
-          document.documentElement.msRequestFullscreen();
-        }
+      }
+      if (screenfull.isEnabled) {
+          screenfull.toggle();
       }
     }
   </script>
