--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <title>Lesssgoooo</title>
   <link rel="stylesheet" href="./style.css">
-
+  <link rel="icon" href="./Assets/favicon.png" type="image/png"/>
 </head>
 
 <body>
