--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
         <div id="mail">
           <div id="mail-names">
-            <div class="mail message-1 mail-active"onclick="changeMail('message-1', 'SPACE EXPRESS PAYMENT RECEIPT')">
+            <div class="mail message-0 mail-active"onclick="changeMail('message-0', 'SPACE EXPRESS PAYMENT RECEIPT', 0)">
               <h2>PAYMENT RECEIPT</h2>
             </div>
           </div>
