--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <div id="videoContainer">
-    <video loop src="./Assets/BG_Neutrum.mp4" id="video"></video>
+    <video loop src="./Assets/BG.mp4" id="video"></video>
   </div>
   <div id='appearingVideoDiv'>
     <video src="./Assets/Intrvideo.mp4" id="appearingVideo"></video>
