almost finished datalogs

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   </div>
   <div id="fullscreen" onclick="fullScreen()"></div>
   <div id="loading">
+    <div id="devices"></div>
     <div id="loading1" onclick="introduction(0)"></div>
     <div id="loading2" class="loadAnimation"></div>
     <p id="pLoading" class="loadAnimation2">Loading</p>
@@ -37,19 +38,13 @@
       <div id="lower">
         <div id="datalogs">
           <div id="datalogs-charactertabs">
-            <div class="Joetag characterpipboytag cpt-active"onclick="changenametag('Joetag')">
-              <h2>JOE</h2>
-            </div>
-            <div class="Maisietag characterpipboytag" onclick="changenametag('Maisietag')">
-              <h2>Maisie</h2>
-            </div>
           </div>
           <div id="datalogs-character">
           </div>
           <div id="datalogs-text">
             <div id="pipboy-text">
-              <h1>JOE</h1>
-              <h4 style="font-weight: normal;">Dear customer,<br> thank you for choosing <b>Space Express</b>.<br><br>Below you can find the details of your trip:<br><br>SHIP: STS<br>BLUE 35918<br>DEPARTURE: EARTH (07/06/2153)<br>ARRIVAL: NOT CLASSIFIED (07/06/2154)<br>COACH: 11<br>SEAT: 16A<br>STANDARD FEE<br>TRAVELLER NAME: NOT SPECIFIED<br></h4>
+              <h1>None</h1>
+              <h4 style="font-weight: normal;">You haven't met anyone still.</h4>
             </div>
           </div>
         </div>
