--- a/index.html
+++ b/index.html
@@ -50,14 +50,17 @@
         </div>
         <div id="mail">
           <div id="mail-names">
-            <div class="mail message-0 mail-active"onclick="changeMail('message-0', 'SPACE EXPRESS PAYMENT RECEIPT', 0)">
+            <div class="mail message-4 mail-active"onclick="changeMail('message-4', 'SPACE EXPRESS PAYMENT RECEIPT', 3)">
               <h2>PAYMENT RECEIPT</h2>
+            </div>
+            <div class="mail message-5"onclick="changeMail('message-5', 'IN CASE OF EMERGENCY', 4)">
+              <h2>IN CASE OF EMERGENCY</h2>
             </div>
           </div>
           <div id="mail-text">
             <div id="pipboy-text">
               <h1>SPACE EXPRESS PAYMENT RECEIPT</h1>
-              <h4 style="font-weight: normal;">Dear customer,<br> thank you for choosing <b>Space Express</b>.<br><br>Below you can find the details of your trip:<br><br>SHIP: STS<br>BLUE 35918<br>DEPARTURE: EARTH (07/06/2153)<br>ARRIVAL: NOT CLASSIFIED (07/06/2154)<br>COACH: 11<br>SEAT: 16A<br>STANDARD FEE<br>TRAVELLER NAME: NOT SPECIFIED<br></h4>
+              <h4 style="font-weight: normal;">Dear customer,<br><br> thank you for choosing <b>Space Express</b>.<br><br>Below you can find the details of your trip:<br><br>SHIP: STS<br><br>BLUE 35918<br><br>DEPARTURE: EARTH (07/06/2153)<br><br>ARRIVAL: NOT CLASSIFIED (07/06/2154)<br><br>COACH: 11<br><br>SEAT: 16A<br><br>STANDARD FEE<br><br>TRAVELLER NAME: NOT SPECIFIED</h4>
             </div>
           </div>
         </div>
